2002-12-02  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/formlib/views.py: wrapped some long
	comments.

	* pylibs/aesencrypt.py: changed some printouts
	to use stderr.

2002-11-29  James Richards  <jrichards@satie.wnyc.org>

	* test/formlib/unittests/validatestest.py
	(DateFieldUnitTest.testValidateSucceeds): Added a series of
	unittests for existing components in validates.py

	* test/formlib/unittests/formtest.py (suite): minor formatting
	correction

2002-11-29  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/aesencrypt.py: added command-line file
	encryption/decryption capability.

2002-11-27  Jacob Smullyan  <smulloni@smullyan.org>

	* test/formlib/htdocs/testDispatch2.pyinc (form2): made 'yomama'
	required. 

2002-11-27  James Richards  <jrichards@satie.wnyc.org>

	* pylibs/formlib/views.py (_requirable.validate): changed default
	validation error message for _requirable to return field
	description [displayed to user] instead of field name [hidden from
	user]
	(ViewableForm.handleList): fixed error in tracking number of
	errors and added check for fields with no error preceding fields
	with errors

	* test/formlib/htdocs/testNestedList.pyinc (checkboxGrpFld):
	Adding test for clearing of defaults, updated to new fields
	dynamic hidden property, validated error display bug fix

	* pylibs/formlib/form.py (Form._get_fields): Adding fields as a
	hidden property to control update of form fields dynamically

	* pylibs/formlib/views.py (ViewableForm._get_fields): Adding
	fields as a hidden property to make updateable fields simpler

2002-11-26  James Richards  <jrichards@satie.wnyc.org>

	* pylibs/formlib/form.py (Form.setFields): adding setFields() to
	support dynamic field update

	* pylibs/formlib/views.py (ViewableForm.setFields): adding
	setFields() to support dynamic layout update

	* test/formlib/htdocs/testNestedList.pyinc (checkboxGrpFld):
	adding call to clearDefault() to ButtonGroup element to validate